Enable decompression fallback to fix loading error
Restrict marble mode minmax zoom and added starting house

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       const buildUrl = "Build";
       const loaderUrl = buildUrl + "/Marbles.loader.js";
       const config = {
-        dataUrl: buildUrl + "/Marbles.data.gz",
-        frameworkUrl: buildUrl + "/Marbles.framework.js.gz",
-        codeUrl: buildUrl + "/Marbles.wasm.gz",
+        dataUrl: buildUrl + "/Marbles.data.unityweb",
+        frameworkUrl: buildUrl + "/Marbles.framework.js.unityweb",
+        codeUrl: buildUrl + "/Marbles.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "YYZProductions",
         productName: "MarblePhysicsProj",
