--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>MarblePhysicsProj</title>
+    <title>Marblez</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -18,6 +18,7 @@
         <div id="unity-progress-bar-empty" style="display: none;">
           <div id="unity-progress-bar-full"></div>
         </div>
+        <div id="unity-logo2"><img src="logo2.png"></div>
         <div class="spinner"></div>
       </div>
     </div>
@@ -32,7 +33,7 @@
         codeUrl: buildUrl + "/Marbles.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "YYZProductions",
-        productName: "MarblePhysicsProj",
+        productName: "Marblez",
         productVersion: "0.1",
       };
 
