--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <script>
       const hideFullScreenButton = "1";
       const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/v1.loader.js";
+      const loaderUrl = buildUrl + "/Marbles.loader.js";
       const config = {
-        dataUrl: buildUrl + "/v1.data.unityweb",
-        frameworkUrl: buildUrl + "/v1.framework.js.unityweb",
-        codeUrl: buildUrl + "/v1.wasm.unityweb",
+        dataUrl: buildUrl + "/Marbles.data.unityweb",
+        frameworkUrl: buildUrl + "/Marbles.framework.js.unityweb",
+        codeUrl: buildUrl + "/Marbles.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "YYZProductions",
         productName: "Marblez",
